compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__literal_snapshots@string_empty.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\"\";"
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Expression(
            Expression {
                id: ExpressionId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        1,
                    ),
                },
                location: <internal>:0:2,
                kind: Literal(
                    Literal {
                        id: ExpressionId {
                            def: ItemId(
                                0,
                            ),
                            index: Idx(
                                1,
                            ),
                        },
                        location: <internal>:0:2,
                        kind: String(
                            StringLiteral {
                                id: ExpressionId {
                                    def: ItemId(
                                        0,
                                    ),
                                    index: Idx(
                                        1,
                                    ),
                                },
                                value: "",
                            },
                        ),
                    },
                ),
            },
        ),
        location: <internal>:0:2,
    },
]
