compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__loop_snapshots@inf_loop_break.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "loop { break; }"
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: InfiniteLoop(
            InfiniteLoop {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        0,
                    ),
                },
                block: Block {
                    statements: [
                        Statement {
                            id: StatementId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    1,
                                ),
                            },
                            kind: Break(
                                Break {
                                    id: StatementId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            1,
                                        ),
                                    },
                                    location: <internal>:7:13,
                                },
                            ),
                            location: <internal>:7:13,
                        },
                    ],
                    location: <internal>:5:15,
                },
                location: <internal>:0:15,
            },
        ),
        location: <internal>:0:15,
    },
]
