compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__loop_snapshots@inf_loop_continue.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "loop { continue; }"
---
[
    Statement {
        id: StatementId {
            def: ItemId {
                package: PackageId(
                    0,
                ),
                index: Idx(
                    0,
                ),
            },
            index: Idx(
                0,
            ),
        },
        kind: InfiniteLoop(
            InfiniteLoop {
                id: StatementId {
                    def: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    index: Idx(
                        0,
                    ),
                },
                block: Block {
                    statements: [
                        Statement {
                            id: StatementId {
                                def: ItemId {
                                    package: PackageId(
                                        0,
                                    ),
                                    index: Idx(
                                        0,
                                    ),
                                },
                                index: Idx(
                                    1,
                                ),
                            },
                            kind: Continue(
                                Continue {
                                    id: StatementId {
                                        def: ItemId {
                                            package: PackageId(
                                                0,
                                            ),
                                            index: Idx(
                                                0,
                                            ),
                                        },
                                        index: Idx(
                                            1,
                                        ),
                                    },
                                    location: <internal>:7:16,
                                },
                            ),
                            location: <internal>:7:16,
                        },
                    ],
                    location: <internal>:5:18,
                },
                location: <internal>:0:18,
            },
        ),
        location: <internal>:0:18,
    },
]
