compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__loop_snapshots@inf_loop_empty.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "loop { }"
---
[
    Statement {
        id: StatementId {
            def: ItemId {
                package: PackageId(
                    0,
                ),
                index: Idx(
                    0,
                ),
            },
            index: Idx(
                0,
            ),
        },
        kind: InfiniteLoop(
            InfiniteLoop {
                id: StatementId {
                    def: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    index: Idx(
                        0,
                    ),
                },
                block: Block {
                    statements: [],
                    location: <internal>:5:8,
                },
                location: <internal>:0:8,
            },
        ),
        location: <internal>:0:8,
    },
]
