compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__loop_snapshots@inf_loop_statement.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "loop { let a = 0; }"
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: InfiniteLoop(
            InfiniteLoop {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        0,
                    ),
                },
                block: Block {
                    statements: [
                        Statement {
                            id: StatementId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    1,
                                ),
                            },
                            kind: Variable(
                                VariableDeclaration {
                                    id: StatementId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            1,
                                        ),
                                    },
                                    name: Identifier {
                                        name: "a",
                                        location: <internal>:11:12,
                                    },
                                    declared_type: None,
                                    value: Expression {
                                        id: ExpressionId {
                                            def: ItemId(
                                                0,
                                            ),
                                            index: Idx(
                                                2,
                                            ),
                                        },
                                        kind: Literal(
                                            Literal {
                                                id: ExpressionId {
                                                    def: ItemId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        2,
                                                    ),
                                                },
                                                kind: Int(
                                                    IntLiteral {
                                                        id: ExpressionId {
                                                            def: ItemId(
                                                                0,
                                                            ),
                                                            index: Idx(
                                                                2,
                                                            ),
                                                        },
                                                        value: 0,
                                                        kind: I32,
                                                    },
                                                ),
                                                location: <internal>:15:16,
                                            },
                                        ),
                                        location: <internal>:15:16,
                                    },
                                    location: <internal>:7:17,
                                },
                            ),
                            location: <internal>:7:17,
                        },
                    ],
                    location: <internal>:5:19,
                },
                location: <internal>:0:19,
            },
        ),
        location: <internal>:0:19,
    },
]
